prevent triangles from adding horizontal scrolling

--- a/src/less/components/triangles.less
+++ b/src/less/components/triangles.less
@@ -2,10 +2,10 @@
   position: relative;
 
   display: block;
-  width: 100vw;
 
   &:before {
     position: absolute;
+    right: 0rem;
 
     content: " ";
 
